Update default secret key for samples

--- a/src/secrets.json.example
+++ b/src/secrets.json.example
@@ -1,6 +1,6 @@
 {
   "Kestrel:Certificates:Development:Password": "f4d009f8-d00b-1dc1-afed-0b778e291a18",
-  "JwtToken:SecretKey": "secretKey",
+  "JwtToken:SecretKey": "EsMmLRT3zzFMCHmhFAblTaGK4HzHHD0q",
   "Hangfire:Password": "admin",
   "EmailService:SenderPassword": "postgres",
   "ConnectionStrings:DefaultConnection": "Server=localhost;Port=5432;Database=VrossiScaffoldDB;User Id=postgres;Password=postgres"
